fix: remove request.bodyHandler() to prevent conflict with BodyHandler (#32)
* fix: remove request.bodyHandler() to prevent conflict with BodyHandler

TracedRouter and CoreTracedRouter used request.bodyHandler() to buffer
the request body before calling ctx.next(). This conflicts with apps
that register Vert.x BodyHandler — only one bodyHandler fires per
request. If BodyHandler runs first, our handler never fires and
ctx.next() is never called, causing "Empty reply from server".

Fix: call ctx.next() directly inside try-with-resources scope. Apps
that need body access must use BodyHandler (standard Vert.x practice).

Tradeoff: Span.current() no longer works in async handler code since
the scope closes when ctx.next() returns. The span is still stored on
the RoutingContext and ends correctly via bodyEndHandler.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* chore: bump version to 2.2.2-beta.4

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* fix: relocate ByteBuddy to avoid conflicts with application fat JARs

Applications that bundle their own ByteBuddy (e.g., from Mockito,
Hibernate, or direct dependency) in fat JARs cause our agent's
ByteBuddy transforms to fail silently — the app's older ByteBuddy
classes shadow ours, causing AgentBuilder.Transformer method
signature mismatches (4-param vs 5-param transform()).

Fix: shade-relocate net.bytebuddy → io.last9.internal.bytebuddy
so our agent's ByteBuddy never conflicts with the application's.

Bumps version to 2.2.2-beta.5.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* ci: add ByteBuddy relocation verification step

Fails the build if net/bytebuddy/ classes are found in the shaded JAR
(relocation broken) or if io/last9/internal/bytebuddy/ classes are
missing (relocation not configured).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* feat(agent): graceful Java 8 fallback — skip instrumentation instead of crashing JVM
